--- a/CSharpStudy.csproj
+++ b/CSharpStudy.csproj
@@ -37,7 +37,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Touch.cs" />
+    <Compile Include="Stream.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
